2011-04-13  Vadim Kurland  <vadim@netcitadel.com>

	* OSConfigurator_pix_os.cpp (_printSSHConfiguration): see #2344
	"FWSM install errors for clear commands". Using correct syntax for
	"clear" commands for FWSM v4.x

2011-04-11  vadim  <vadim@netcitadel.com>

	* PolicyCompiler_PrintRule.cpp (_printTarget): see #2235 "Modified
	rule action for Continue". Rules with action "Continue" should
	translate into iptables commands without "-j TARGET" parameter. If
	such rule also has logging enabled, it should use target "-j LOG"
	instead of generating additional chain.

	* IPTImporter.cpp (pushPolicyRule): see #2206 Iptables commands with
	no "-j TARGET" parameter should be imported using action "Continue".

	* iptables.g (comment): see #2336 Importer for iptables recognizes
	version stored in the top comment by iptables-save and sets
	version in the firewall object it creates.

2011-04-10  vadim  <vadim@netcitadel.com>

	* utils.cpp (expand_interface_with_phys_address): see #2324 "NAT +
	MAC-matching rules not generated properly". Iptables NAT rules
	matching a group of host objects with both IP and MAC addresses each
	in "Original Source" were not generated properly.

	* PolicyCompiler_PrintRule.cpp (_printOptionalGlobalRules): SF bug
	3178186 "Add ND/NS allow rules for the FORWARD chain". Rules that are
	added automatically to ipv6 Linux firewall to permit neighbor discovery
	packets should be also added to the FORWARD chain if the firewall is
	a bridge.

	* ObjectManipulator_create_new.cpp (actuallyCreateObject): see #2229
	"Multiple new objects with the same name". The GUI should automatically
	choose unique object names for new objects.

	* platforms.cpp (setInterfaceTypes): see #2224 "FreeBSD - Bridge
	interfaces with the name vlan<xx> don't show as Bridge Port
	Interfaces". This actually applies to all OS where we support vlan
	and bridge interfaces. Fwbuilder GUI should allow the user to set
	subinterface type to both "ethernet" and "vlan" when its parent