@@ -1,0 +1,34 @@
+## -*- mode: shell-script; -*- 
+##
+## To be able to make changes to the part of configuration created
+## from this configlet you need to copy this file to the directory
+## fwbuilder/configlets/pix_os/ in your home directory and modify it.
+## Double "##" comments are removed during processing but single "#"
+## comments are be retained and appear in the generated script. Empty
+## lines are removed as well.  
+##
+## Configlets support simple macro language with these constructs:
+## {{$var}} is variable expansion
+## {{if var}} is conditional operator.
+##
+## 
+## failover
+## failover lan unit primary
+## failover lan interface failover Ethernet3
+## failover lan enable
+## failover key ******
+## failover link state Ethernet2
+## failover interface ip failover 10.1.0.1 255.255.255.0 standby 10.1.0.2
+## failover interface ip state 10.0.0.1 255.0.0.0 standby 10.0.0.2
+
+failover lan unit {{$primary_or_secondary}}
+failover lan interface {{$failover_interface_label}} {{$failover_interface_name}} 
+failover lan enable
+failover key {{$failover_key}}
+
+failover interface ip {{$failover_interface_label}} {{$failover_interface_primary_address}} {{$failover_interface_primary_netmask}} standby {{$failover_interface_standby_address}}
+
+failover link {{$state_sync_interface_label}} {{$state_sync_interface_name}}
+failover interface ip {{$state_sync_interface_label}} {{$state_sync_interface_primary_address}} {{$state_sync_interface_primary_netmask}} standby {{$state_sync_interface_standby_address}}
+
+failover
