@@ -1,0 +1,18 @@
+## -*- mode: shell-script; -*- 
+##
+## To be able to make changes to the part of configuration created
+## from this configlet you need to copy this file to the directory
+## fwbuilder/configlets/pix_os/ in your home directory and modify it.
+## Double "##" comments are removed during processing but single "#"
+## comments are be retained and appear in the generated script. Empty
+## lines are removed as well.  
+##
+## Configlets support simple macro language with these constructs:
+## {{$var}} is variable expansion
+## {{if var}} is conditional operator.
+##
+
+nameif {{$interface_name}} {{$interface_label}} security{{$security_level}}
+{{if configure_interface_address}}ip address {{$interface_label}} {{$address}} {{$netmask}} {{endif}}
+{{if configure_standby_address}}failover ip address {{$interface_label}} {{$standby_address}} {{endif}}
+
